Claims Management App/mdapipkg/mdapipkg/unpackaged/unpackaged/objects/Policy__c.object
<CustomObject>
    <description>Holds insurance policy information.</description>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Policy Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Number_Block__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Policy Number Block</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <formula>LEFT(TEXT(Policy_Type__c),1) + Policy_Number_Block__c</formula>
        <label>Policy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Umbrella</fullName>
                </value>
                <value>
                    <fullName>Renters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Policy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Policy_Number__c</columns>
        <columns>Policy_Holder__c</columns>
        <columns>Policy_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>